Fix or alignment

--- a/app/css/scss/application.scss
+++ b/app/css/scss/application.scss
@@ -1,5 +1,4 @@
 @import "reset";
-@import "animations";
 @import "component";
 
 
@@ -51,7 +50,7 @@ $choice-circle-radius: 30px;
     &:first-child:before { display: none; }
     &:before {
       position: absolute;
-      left: -$choice-circle-radius;
+      left: -$choice-circle-radius+ -$choice-img-border;
       top: 50%;
       content: "OR";
       z-index: 999;
